<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_black"
    tools:context=".fragment.authfragment.AuthFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_fields"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/default_indent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlt_enter_email"
            style="@style/input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_string">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_enter_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color"
                android:textSize="@dimen/default_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlt_enter_password"
            style="@style/input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_indent"
            android:hint="@string/password_string"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/text_input_box_stroke">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_enter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/text_color"
                android:textSize="@dimen/default_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_indent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_akk_string"
                android:textColor="@color/text_color"
                android:textSize="@dimen/small_text_size" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/registr_string"
                android:textColor="@color/purple_500"
                android:textSize="@dimen/small_text_size"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_indent"
        android:layout_marginBottom="@dimen/large_indent"
        android:backgroundTint="@color/orange"
        android:drawableEnd="@drawable/ic_next"
        android:text="@string/next"
        android:textColor="@color/black"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>